tarefa 3 feita e atualizada

--- a/ATIVIDADE 3/index.html
+++ b/ATIVIDADE 3/index.html
@@ -10,30 +10,33 @@
 </head>
 
 <body>
+
+    <!-- COMEÇO DO CABEÇALHO -->
+
     <div class="header">
-
         <div class="container">
-
-            <h1 class="title">Acquatec</h1>
+            <h1 class="title">AcquaTec</h1>
 
             <ul class="navBar">
-
-                <li class="aqui">Home</li>
-                <li>Simulador</li>
                 <li>
-                    <a href="login.html">
-                        Login
-                    </a>
+                    <a href="index.html">Home</a>
                 </li>
-                <li>Cadastro</li>
-
+                <li>
+                    <a href="#">Simulador</a>
+                </li>
+                <li>
+                    <a href="login.html">Login</a>
+                </li>
+                <li class="aqui">
+                    <a href="cadastro.html">Cadastro</a>
+                </li>
             </ul>
-
         </div>
-
     </div>
 
-    <!-- COMEÇO DO BANNER -->
+    <!-- FIM DO CABEÇALHO -->
+
+    <!-- COMEÇO DO BANNER - INDEX -->
 
     <div class="banner">
 
@@ -47,7 +50,7 @@
 
     </div>
 
-    <!-- FIM DO BANNER -->
+    <!-- FIM DO BANNER - INDEX -->
 
     <!-- COMEÇO DO SOCIAL -->
 
@@ -58,11 +61,7 @@
                     <img src="imgs/planet-earth_color.png" alt="">
                     <h4> Missão </h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit, id ratione
-                        aspernatur
-                        numquam fugit odit eveniet iste sit sed vel officiis deserunt facere eos? Autem tempore soluta
-                        et
-                        quibusdam?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit, id ratione aspernatur numquam fugit odit eveniet iste sit sed vel officiis deserunt facere eos? Autem tempore soluta et quibusdam?
                     </p>
                 </div>
 
@@ -70,11 +69,7 @@
                     <img src="imgs/lightbulb_color.png" alt="">
                     <h4> Visão </h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit, id ratione
-                        aspernatur
-                        numquam fugit odit eveniet iste sit sed vel officiis deserunt facere eos? Autem tempore soluta
-                        et
-                        quibusdam?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit, id ratione aspernatur numquam fugit odit eveniet iste sit sed vel officiis deserunt facere eos? Autem tempore soluta et quibusdam?
                     </p>
                 </div>
 
@@ -82,11 +77,7 @@
                     <img src="imgs/growth_color.png" alt="">
                     <h4> Valores </h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit, id ratione
-                        aspernatur
-                        numquam fugit odit eveniet iste sit sed vel officiis deserunt facere eos? Autem tempore soluta
-                        et
-                        quibusdam?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit, id ratione aspernatur numquam fugit odit eveniet iste sit sed vel officiis deserunt facere eos? Autem tempore soluta et quibusdam?
                     </p>
                 </div>
             </div>
@@ -94,6 +85,7 @@
     </div>
 
     <!-- FIM DO SOCIAL -->
+
     <!-- COMEÇO DO FOOTER -->
 
     <div class="footer">
@@ -103,6 +95,8 @@
             </p>
         </div>
     </div>
+
+    <!-- FIM DO FOOTER -->
 
 </body>
 
