--- a/ATIVIDADE 3/cadastro.html
+++ b/ATIVIDADE 3/cadastro.html
@@ -5,65 +5,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <!-- COMEÇO DO CABEÇALHO -->
+
     <div class="header">
-
         <div class="container">
-
-            <h1 class="title">Acquatec</h1>
+            <h1 class="title">AcquaTec</h1>
 
             <ul class="navBar">
-
-                <li> <a href="index.html">
-                        Home
-                    </a>
+                <li>
+                    <a href="index.html">Home</a>
                 </li>
-                <li>Simulador</li>
-                <li class="aqui">Login</li>
-                <li>Cadastro</li>
-
+                <li>
+                    <a href="#">Simulador</a>
+                </li>
+                <li>
+                    <a href="login.html">Login</a>
+                </li>
+                <li class="aqui">
+                    <a href="cadastro.html">Cadastro</a>
+                </li>
             </ul>
-
         </div>
-
     </div>
 
-    <!-- COMEÇO DO BANNER -->
+    <!-- FIM DO CABEÇALHO -->
 
-    <div class="banner">
+    <<!-- COMEÇO DO BANNER - CADASTRO -->
 
-        <div class="container">
+        <div class="banner-c">
 
-            <div class="card">
-                <h1> Olá, seja bem vindo </h1>
-                <h4> E-mail </h4>
-                <input type="text" placeholder="seuemail@exemplo.com">
-                <h4> Senha </h4>
-                <input type="password" placeholder="*********">
-                <button> Entrar </button>
+            <div class="container">
+
+                <div class="card-c">
+
+                    <h1>CADASTRO</h1>
+
+                    <h4>Digite seu Nome e Sobrenome:</h4>
+                    <input type="text" placeholder="Nome Sobrenome">
+
+                    <h4>Digite seu E-mail:</h4>
+                    <input type="text" placeholder="seuemail@gmail.com">
+
+                    <h4>Digite seu Número de Telefone:</h4>
+                    <input type="text" placeholder="x xxxx-xxxx">
+
+                    <h4>Digite seu CPF:</h4>
+                    <input type="text" placeholder="xxx.xxx.xxx-xx">
+
+                    <h4>Digite uma Senha:</h4>
+                    <input type="password" placeholder="******">
+
+
+
+                    <button>Cadastrar</button>
+
+                </div>
             </div>
-
-
         </div>
 
-    </div>
+        <!-- FIM DO BANNER - CADASTRO  -->
 
-    <!-- FIM DO BANNER -->
+        <!-- COMEÇO DO FOOTER -->
 
-
-    <!-- COMEÇO DO FOOTER -->
-
-    <div class="footer">
-        <div class="container">
-            <p>
-                Feito por amor por um aluno &hearts; Sptech &copy;
-            </p>
+        <div class="footer">
+            <div class="container">
+                <p>
+                    Feito com amor por um aluno &hearts; SPTech &copy; 2022
+                </p>
+            </div>
         </div>
-    </div>
+
+        <!-- FIM DO FOOTER -->
 
 </body>
 
