--- a/ATIVIDADE 3/login.html
+++ b/ATIVIDADE 3/login.html
@@ -10,41 +10,48 @@
 </head>
 
 <body>
+
+    <!-- COMEÇO DO HEADER -->
+
     <div class="header">
-
         <div class="container">
-
-            <h1 class="title">Acquatec</h1>
+            <h1 class="title">AcquaTec</h1>
 
             <ul class="navBar">
-
-                <li> <a href="index.html">
-                        Home
-                    </a>
+                <li>
+                    <a href="index.html">Home</a>
                 </li>
-                <li>Simulador</li>
-                <li class="aqui">Login</li>
-                <li>Cadastro</li>
-
+                <li>
+                    <a href="#">Simulador</a>
+                </li>
+                <li>
+                    <a href="login.html">Login</a>
+                </li>
+                <li class="aqui">
+                    <a href="cadastro.html">Cadastro</a>
+                </li>
             </ul>
-
         </div>
-
     </div>
+
+    <!-- FIM DO HEADER -->
 
     <!-- COMEÇO DO BANNER -->
 
     <div class="banner">
 
         <div class="container">
-            
-            <div class="card">
+
+            <div class="card-l">
+
                 <h1> Olá, seja bem vindo </h1>
                 <h4> E-mail </h4>
                 <input type="text" placeholder="seuemail@exemplo.com">
+
                 <h4> Senha </h4>
                 <input type="password" placeholder="*********">
                 <button> Entrar </button>
+
             </div>
 
 
@@ -64,6 +71,8 @@
             </p>
         </div>
     </div>
+
+    <!-- FIM DO FOOTER -->
 
 </body>
 
