--- a/ATIVIDADE 5/public/cadastro.html
+++ b/ATIVIDADE 5/public/cadastro.html
@@ -67,6 +67,12 @@
                     <span class="tipo_campo">Nome:</span>
                     <input id="nome_input" type="text" placeholder="Seu nome">
 
+                    <span class="tipo_campo">Cpf:</span>
+                    <input id="cpf_input" type="text" placeholder="***.***.***-**">
+
+                    <span class="tipo_campo">Número:</span>
+                    <input id="numero_input" type="text" placeholder="seu numero">
+
                     <span class="tipo_campo">E-mail:</span>
                     <input id="email_input" type="text" placeholder="meuemail@provedor.com">
 
@@ -110,6 +116,8 @@
         //Recupere o valor da nova input pelo nome do id
         // Agora vá para o método fetch logo abaixo
         var nomeVar = nome_input.value;
+        var cpfVar = cpf_input.value;
+        var numeroVar = numero_input.value;
         var emailVar = email_input.value;
         var senhaVar = senha_input.value;
         var confirmacaoSenhaVar = confirmacao_senha_input.value;
@@ -155,6 +163,8 @@
                 // crie um atributo que recebe o valor recuperado aqui
                 // Agora vá para o arquivo routes/usuario.js
                 nomeServer: nomeVar,
+                cpfServer: cpfVar,
+                numeroServer: numeroVar,
                 emailServer: emailVar,
                 senhaServer: senhaVar
             })
